--- a/MovieRecommendationBackend/Properties/launchSettings.json
+++ b/MovieRecommendationBackend/Properties/launchSettings.json
@@ -19,6 +19,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5234",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "MovieRecommendationBackend": {
       "commandName": "Project",
       "dotnetRunMessages": true,
