added sqlserver config

--- a/MovieRecommendationBackend/appsettings.Development.json
+++ b/MovieRecommendationBackend/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseProvider": "PostgreSQL",
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Database=MovieRecommendationDB;Username=postgres;Password=1234",
+    "SqlServer": "Host=localhost;Database=MovieRecommendationDB;Username=sqlserver;Password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
